--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "js-cookie": "2.2.0",
     "js-md5": "^0.7.3",
     "loadsh": "0.0.2",
+    "moment": "^2.24.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "quill": "^1.3.6",
