--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "v-charts": "^1.19.0",
     "v-distpicker": "^1.2.1",
     "vue": "2.5.10",
+    "vue-clipboard2": "^0.3.1",
     "vue-echarts-v3": "^2.0.1",
     "vue-i18n": "^8.11.2",
     "vue-quill-editor": "^3.0.6",
