--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vue-i18n": "^8.11.2",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "3.0.1",
+    "vuedraggable": "^2.23.2",
     "vuex": "3.0.1"
   },
   "devDependencies": {
