--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "npm run lint"
   },
   "dependencies": {
-    "axios": "0.17.1",
+    "axios": "^0.21.1",
     "babel-polyfill": "^6.26.0",
     "copy-webpack-plugin": "^4.2.3",
     "echarts": "^4.2.1",
